# ROS2_Game_Program

./: README.md
src/moving_fingers/: package.xml  setup.cfg  setup.py
src/moving_fingers/moving_fingers/: actuator1.py  actuator2.py  actuator3.py  actuator4.py  actuator5.py  brain.py  sensor1.py  sensor2.py  sensor3.py  sensor4.py  sensor5.py
src/redirection/: CMakeLists.txt  package.xml
src/redirection/action/: Redirection.action
